fix: unit tests were fixed and working with grid

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(${This} ${Sources})
 target_link_libraries(${This} PUBLIC
     gtest_main
     Game
+    ncurses
     )
     
 add_test(
