bug: user movements and trap locations can not compared

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,8 @@
         "streambuf": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "hash_map": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "C_Cpp.loggingLevel": "Debug"
